--- a/src/styles.css
+++ b/src/styles.css
@@ -1,50 +1,234 @@
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
 }
 
 header {
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px;
+  background-color: #fff;
+  padding: 10px 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 95%;
+  margin: 0 auto;
+  border-radius: 5px;
 }
 
-#product-list {
+.header-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+header button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  color: #000000;
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 10px;
+  padding: 10px 15px;
+  text-decoration: none;
+}
+
+header button:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+main {
+  max-width: 90%;
+  margin: 20px auto;
+  padding: 0 15px;
+}
+
+.product-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(5, 1fr);
   gap: 15px;
-  padding: 15px;
 }
 
 .product-card {
-  border: 1px solid #ccc;
-  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 25rem;
+  height: auto;
+  text-align: center;
+  padding: 15px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+.product-detail-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  text-align: center;
+  padding: 15px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+.product-detail-card img {
+  width: 30%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.product-card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .product-card img {
-  max-width: 100%;
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
 }
 
-.hidden {
-  display: none;
+.product-card h3 {
+  font-size: 16px;
+  margin: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-/* Popupo stilius */
-#popup {
+.product-card p {
+  font-size: 14px;
+  margin: 0 10px 10px 10px;
+  color: #555;
+}
+
+.product-card h3,
+.product-card p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.popup {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-#popup-message {
+.popup.show {
+  display: flex;
+}
+
+.popup.hidden {
+  display: none !important;
+}
+
+.popup-content {
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
+}
+
+button {
+  background-color: #ffffff;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  padding: 13px 23px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
+  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s,
+    transform 0.1s;
+  user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+}
+button:focus-visible {
+  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+  transition: box-shadow 0.2s;
+}
+
+button:active {
+  background-color: #f7f7f7;
+  border-color: #000000;
+  transform: scale(0.96);
+}
+
+button:disabled {
+  border-color: #dddddd;
+  color: #dddddd;
+  cursor: not-allowed;
+  opacity: 1;
+}
+
+#close-popup-btn {
+  margin-top: 15px;
+  padding: 8px 12px;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#close-popup-btn:hover {
+  background-color: #c82333;
+}
+
+@media (max-width: 991px) {
+  .header-container {
+    justify-content: center;
+  }
+
+  .product-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 575px) {
+  .header-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header-button {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+
+  .product-list {
+    grid-template-columns: 1fr;
+  }
+
+  .product-card img {
+    height: 250px;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
