--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 header {
@@ -83,6 +83,9 @@ main {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.product-detail-card p {
+  padding: 1rem;
 }
 .product-card:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -198,7 +201,7 @@ button:disabled {
   background-color: #c82333;
 }
 
-@media (max-width: 991px) {
+@media (min-width: 479px) and (max-width: 991px) {
   .header-container {
     justify-content: center;
   }
@@ -208,7 +211,7 @@ button:disabled {
   }
 }
 
-@media (max-width: 575px) {
+@media (max-width: 478px) {
   .header-container {
     flex-direction: column;
     align-items: center;
